# titanic-ml-pipeline-3

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/model/: logistic_regression.yaml  random_forest.yaml
configs/preprocessing/: default.yaml
configs/training/: default.yaml
models/: logistic_regression.pkl  random_forest.pkl
outputs/2026-05-10/12-23-41/.hydra/: hydra.yaml
outputs/2026-05-10/12-33-48/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-10/12-36-41/.hydra/: hydra.yaml
outputs/2026-05-10/12-55-59/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-05-10/13-22-48/.hydra/: hydra.yaml
outputs/2026-05-10/13-23-05/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-10/13-23-14/.hydra/: hydra.yaml
outputs/2026-05-10/13-26-26/.hydra/: hydra.yaml
outputs/2026-05-10/13-26-54/.hydra/: hydra.yaml
outputs/2026-05-10/13-28-02/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-05-10/17-42-06/.hydra/: config.yaml  hydra.yaml
src/: config.py  data_loader.py  evaluate.py  predict.py  preprocessor.py  train.py
